<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <!-- Título -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:text="@string/title_main_activity"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="32sp" />

        <!-- Imagem dos livros -->
        <ImageView
            android:id="@+id/book_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:src="@drawable/books" />

        <!-- Input do nome do livro -->
        <EditText
            android:id="@+id/book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/hint_book_name"
            android:inputType="text" />

        <!-- Input da qtd. de pgs do livro -->
        <EditText
            android:id="@+id/qtd_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/book_name"
            android:layout_below="@+id/book_name"
            android:ems="10"
            android:hint="@string/hint_qtd_pages"
            android:inputType="number" />

        <!-- Botão de cadastrar livro -->
        <Button
            android:id="@+id/register_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/list_books_activity"
            android:layout_alignBottom="@+id/list_books_activity"
            android:layout_toEndOf="@+id/register_reminder_activity_button"
            android:background="@android:color/holo_green_dark"
            android:text="@string/register_book" />

        <!-- Botão de listar os livros cadastrados-->
        <Button
            android:id="@+id/list_books_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/choose_image"
            android:layout_alignBottom="@+id/choose_image"
            android:layout_toStartOf="@+id/register_reminder_activity_button"
            android:background="@android:color/holo_green_dark"
            android:text="@string/list_books_button" />

        <!--Botão de ir para tela de cadastro de lembretes -->
        <Button
            android:id="@+id/register_reminder_activity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="52dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/register_reminders_button" />

        <Button
            android:id="@+id/choose_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/register_reminder_activity_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/choose_image" />

</RelativeLayout>
